# labcode-jmacey-1

./: .gitignore  README.md
DLA/: CMakeLists.txt
DLA/include/: Walker.h
DLA/src/: Image.cpp  Walker.cpp  main.cpp
Image/: CMakeLists.txt
Image/include/: Image.h  RGBA.h
Image/src/: Image.cpp  main.cpp
Image/tests/: ImageTests.cpp  RGBATests.cpp
Particle/: CMakeLists.txt
Particle/include/: Emitter.h  Particle.h  Vec3.h
Particle/src/: Emitter.cpp  Vec3.cpp  main.cpp
Particle/tests/: ParticleTests.cpp
ParticleNGL/: CMakeLists.txt
ParticleNGL/include/: Emitter.h  NGLScene.h
ParticleNGL/src/: Emitter.cpp  NGLScene.cpp
ParticleSOA/: CMakeLists.txt
ParticleSOA/include/: Emitter.h  NGLScene.h  Particle.h
ParticleSOA/shaders/: ParticleFragment.glsl  ParticleVertex.glsl
ParticleSOA/src/: Emitter.cpp  NGLScene.cpp
RGBA/: CMakeLists.txt
RGBA/src/: main  main.cpp
